# CMake

./: .gitignore  CMakeLists.txt  lib_file.cpp  lib_file.h  main.cpp  variadicfun.cpp  variadictemplate.cpp
Adder/: adder.cpp
